--- a/.github/workflows/revision-preview-deployment.yaml
+++ b/.github/workflows/revision-preview-deployment.yaml
@@ -66,4 +66,4 @@ jobs:
         uses: thollander/actions-comment-pull-request@v2.5.0
         with:
           message: |
-            Preview URL: ${{ steps.deploy.outputs.public_url }}
+            Preview URL: https://${{ steps.deploy.outputs.public_url }}
